# django-best-practice

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: deployment.yml
docs/: conf.py  index.rst
docs/authentification/: setup.rst
docs/cache/: setup.rst
docs/environment/: project-structure.rst  setup-environment.rst  setup-project.rst
docs/framework/: rest.rst
docs/session/: setup.rst
source/cache/: setup.rst
source/environment/: project-structure.rst  setup.rst
source/framework/: rest.rst
source/session/: setup.rst
