[tool.poetry]
name = "django-best-practice"
version = "0.1.0"
description = ""
authors = ["xLanstar <danny95624268@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
sphinx = "^8.1.3"
sphinx-tabs = "^3.4.7"
furo = "^2024.8.6"
sphinx-copybutton = "^0.5.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
