[project]
name = "django-best-practice"
version = "0.1.0"
description = ""
authors = [{ name = "xLanstar", email = "danny95624268@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "furo>=2024.8.6",
    "sphinx>=8.2.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-tabs>=3.4.7",
]

[dependency-groups]
dev = ["esbonio>=0.16.5", "pre-commit>=4.2.0"]
